Pull up following revision(s) (requested by tsutsui in ticket #246): 	sys/arch/powerpc/ibm4xx/intr.c: revision 1.21 Account ci->ci_idepth on calling handlers in ext_intr() as well as powerpc/pic/intr.c:pic_handle_intr().  Closes PR port-evbppc/40288. Should be pulled up to netbsd-5.